--- a/Mappings/mapping.yaml
+++ b/Mappings/mapping.yaml
@@ -1,6 +1,205 @@
-dataset = SensorRepository.n3
-ontology = ontology
-streams = streams
-cqels_query = cqels_query
-csparql_query = csparql_query
-rdfox_query = rdfox_query
+#Classes as defined int he ontologies
+#instances start with ? 
+#properties as it is
+templates:
+  - type: PersonAccount
+    triples:
+      - subject: ?postinguser
+        predicate: rdf:type
+        object: PersonAccount
+      - subject: ?postinguser
+        predicate: posts
+        object: ?tweet
+      - subject: ?tweet
+        predicate: rdf:type
+        object: Tweet
+      - subject: ?tweet
+        predicate: hasDateTimestamp
+        object: ?timestamp
+      - subject: ?tweet
+        predicate: isAbout
+        object: ?conferenceinstance
+      - subject: ?tweet
+        predicate: mentions
+        object: ?otherusers
+      - subject: ?tweet
+        predicate: hasHashtag
+        object: ?hashtag
+      - subject: ?tweet
+        predicate: hasTweetID
+        object: ?tweet
+      - subject: ?postinguser
+        predicate: hasUserName
+        object: ?username
+      - subject: ?postinguser
+        predicate: hasAffiliation
+        object: ?affiliation
+      - subject: ?affiliation
+        predicate: rdf:type
+        object: ?organization       
+      - subject: ?postinguser
+        predicate: hasUserID
+        object: ?postinguser
+  - type: ConferenceAccount
+    triples:
+      - subject: ?postinguser
+        predicate: rdf:type
+        object: ConferenceAccount
+      - subject: ?postinguser
+        predicate: posts
+        object: ?tweet
+      - subject: ?tweet
+        predicate: rdf:type
+        object: Tweet
+      - subject: ?tweet
+        predicate: hasDateTimestamp
+        object: ?timestamp
+      - subject: ?tweet
+        predicate: isAbout
+        object: ?conferenceinstance
+      - subject: ?tweet
+        predicate: mentions
+        object: ?otherusers
+      - subject: ?tweet
+        predicate: hasHashtag
+        object: ?hashtag
+      - subject: ?tweet
+        predicate: hasTweetID
+        object: ?tweet
+      - subject: ?postinguser
+        predicate: hasUserName
+        object: ?username
+      - subject: ?postinguser
+        predicate: hasUserID
+        object: ?postinguser
+  - type: Conference
+    triples:
+      - subject: ?conferenceinstance
+        predicate: rdf:type
+        object: :Conference
+      - subject: ?conferenceinstance
+        predicate: hasConferenceName
+        object: ?conferenceName
+      - subject: ?conferenceinstance
+        predicate: hasId
+        object: ?conferenceid
+      - subject: ?conferenceinstance
+        predicate: hasMode
+        object: ?conferenceMode
+      - subject: ?conferenceinstance
+        predicate: hasPaperTrack
+        object: ?paperTrack
+      - subject: ?conferenceinstance
+        predicate: hasWebsiteURL
+        object: ?url
+      - subject: ?conferenceinstance
+        predicate: hasLocation
+        object: ?location
+  - type: ConferencePaper
+    triples:
+      - subject: ?subject
+        predicate: rdf:type
+        object: ConferencePaper
+       - subject: ?subject
+        predicate: isAcceptedAt
+        object: ?conferenceinstance
+      - subject: ?subject
+        predicate: hasAuthor
+        object: ?postinguser
+      - subject: ?subject
+        predicate: hasTitle
+        object: ?papertitle
+      - subject: ?subject
+        predicate: hasPaperDomain
+        object: ?paperdomain   
+      - subject: ?subject
+        predicate: isPresentedBy
+        object: ?postingAuthor
+       - subject: ?subject
+        predicate: hasAuthor
+        object: ?otherusers  
+      - subject: ?otherusers
+        predicate: hasUserName
+        object: ?username
+      - subject: ?otherusers
+        predicate: hasAffiliation
+        object: ?affiliation
+      - subject: ?affiliation
+        predicate: rdf:type
+        object: ?organization       
+      - subject: ?otherusers
+        predicate: hasUserID
+        object: ?otherusers        
+  - type: Organization
+    triples:
+      - subject: ?organization
+        predicate: rdf:type
+        object: Organization
+      - subject: ?subject
+        predicate: hasLocation
+        object: ?location
+  - type: Organizers
+    triples:
+      - subject: ?subject
+        predicate: hasRole
+        object: ?organizerRole
+  - type: Location
+    triples:
+      - subject: ?location
+        predicate: isPartOf
+        object: ?city
+      - subject: ?city
+        predicate: hasLatitude
+        object: ?latitude
+      - subject: ?location
+        predicate: hasLongitude
+        object: ?longitude   
+      - subject: ?city
+        predicate: isPartOf
+        object: ?country
+      - subject: ?country
+        predicate: hasLatitude
+        object: ?latitude
+      - subject: ?country
+        predicate: hasLongitude
+        object: ?longitude  
+  - type: Attending
+    triples:
+      - subject: ?postinguser
+        predicate: attends
+        object: ?conferenceinstance
+  - type: Volunteer
+    triples:
+      - subject: ?postinguser
+        predicate: rdf:type
+        object: Volunteer
+      - subject: ?postinguser
+        predicate: attends
+        object: ?conferenceinstance        
+  - type: StudentGrant
+    triples:
+      - subject: ?postinguser
+        predicate: rdf:type
+        object: Student
+      - subject: ?postinguser
+        predicate: attends
+        object: ?conferenceinstance   
+  - type: Speaker
+    triples:
+      - subject: ?otherusers
+        predicate: rdf:type
+        object: ?speaker
+      - subject: ?otherusers
+        predicate: hasRole
+        object: ?role
+      - subject: ?otherusers
+        predicate: givesTalk
+        object: ?talk
+      - subject: ?postinguser
+        predicate: givesTalkOn
+        object: ?topic
+
+        
+#volunteer [Student and (Author or NonAuthor)]
+#Sponsor
+#Organization
