--- a/ABoxGenerator/config.properties
+++ b/ABoxGenerator/config.properties
@@ -1,7 +1,10 @@
 #Note: The values here are kept very small but they can be modified by the users 
 #to simulate several types (small/medium/large) of conferences and hence generate datasets of various sizes.
-fullFileFormat=n3
-tweetFileFormat=ttl
+eventDataFormat=ttl
+tweetMetaDataFileFormat=ttl
+#twitter user accounts involved for each conference
+usersInvolved_min=1000
+usersInvolved_max=2000
 conferenceDuration_min_months=6
 conferenceDuration_max_months=9
 nextConferenceCycleStartsIn_min=3
@@ -23,3 +26,9 @@ collegeCount_min=10
 collegeCount_max=20
 cityCount_min=100
 cityCount_max=200
+volunteerCount_min=10
+volunteerCount_max=20
+studentGrant_min=10
+studentGrant_max=20
+speakerCount_min=5
+speakerCount_max=10
