--- a/Mappings/mapping.yaml
+++ b/Mappings/mapping.yaml
@@ -1,14 +1,17 @@
-templates:
+mapping:
   - PersonAccount:
-      - subject: ?postinguser
+      - subject: ?personaccount
         predicate: rdf:type
         object: PersonAccount
-      - subject: ?postinguser
+      - subject: ?personaccount
         predicate: posts
         object: ?tweet
-      - subject: ?tweet
+      - subject: ?tweet 
         predicate: hasInformation
         object: ?information
+      - subject: ?tweet 
+        predicate: isAbout
+        object: ?eventphase
       - subject: ?tweet
         predicate: rdf:type
         object: Tweet
@@ -23,32 +26,41 @@ templates:
         object: ?otherusers
       - subject: ?tweet
         predicate: hasHashtag
-        object: _hashtag
+        object: _conferencehashtag
+        - subject: ?tweet
+        predicate: hasHashtag
+        object: _domainhashtags
       - subject: ?tweet
         predicate: hasTweetID
         object: _tweet
-      - subject: ?postinguser
+      - subject: ?personaccount
         predicate: hasUserName
         object: _username
-      - subject: ?postinguser
+      - subject: ?personaccount
         predicate: hasAffiliation
         object: ?affiliation
       - subject: ?affiliation
         predicate: rdf:type
-        object: ?organization       
-      - subject: ?postinguser
+        object: ?organization  
+      - subject: ?organization
+        predicate: hasLocation
+        object: ?location        
+      - subject: ?personaccount
         predicate: hasUserID
-        object: _postinguser
+        object: _personaccount
   - ConferenceAccount:
-      - subject: ?postinguser
+      - subject: ?conferenceaccount
         predicate: rdf:type
         object: ConferenceAccount
-      - subject: ?postinguser
+      - subject: ?conferenceaccount
         predicate: posts
         object: ?tweet
       - subject: ?tweet
         predicate: rdf:type
         object: Tweet
+      - subject: ?tweet 
+        predicate: isAbout
+        object: ?eventphase
       - subject: ?tweet
         predicate: hasInformation
         object: ?information
@@ -60,19 +72,19 @@ templates:
         object: ?conferenceinstance
       - subject: ?tweet
         predicate: mentions
-        object: ?otherusers
+        object: ?organizers
       - subject: ?tweet
         predicate: hasHashtag
-        object: ?domain
+        object: _conferencehashtag
       - subject: ?tweet
         predicate: hasTweetID
         object: ?tweet
       - subject: ?postinguser
         predicate: hasUserName
         object: ?username
-      - subject: ?postinguser
+      - subject: ?conferenceaccount
         predicate: hasUserID
-        object: ?postinguser
+        object: _conferenceaccount
   - Conference:
       - subject: ?conferenceinstance
         predicate: rdf:type
@@ -84,17 +96,27 @@ templates:
         predicate: hasId
         object: ?conferenceid
       - subject: ?conferenceinstance
-        predicate: hasMode
+        predicate: hasEventMode
         object: ?conferenceMode
-      - subject: ?conferenceinstance
-        predicate: hasPaperTrack
-        object: ?paperTrack
       - subject: ?conferenceinstance
         predicate: hasWebsiteURL
         object: _url
       - subject: ?conferenceinstance
         predicate: hasLocation
         object: ?location
+      - subject: ?conferenceinstance
+        predicate: hasEdition
+        object: _edition
+  - ConferenceTracks:       
+      - subject: ?conferenceinstance
+        predicate: hasPaperTrack
+        object: ?paperTrack
+      - subject: ?paperTrack
+        predicate: hasTrackChair
+        object: ?trackChair
+      - subject: ?trackChair
+        predicate: rdf:type
+        object: :Person        
   - ConferencePaper:
       - subject: ?paper
         predicate: rdf:type
@@ -108,6 +130,9 @@ templates:
       - subject: ?paper
         predicate: hasAuthor
         object: ?postinguser
+      - subject: ?postinguser
+        predicate: rdf:type
+        object: :Person   
       - subject: ?paper
         predicate: hasTitle
         object: _papertitle
@@ -119,19 +144,38 @@ templates:
         object: ?postingUser
       - subject: ?paper
         predicate: hasAuthor
-        object: ?otherusers  
-      - subject: ?otherusers
+        object: ?coauthors 
+      - subject: ?coauthors
         predicate: hasUserName
         object: ?username
-      - subject: ?otherusers
+      - subject: ?coauthors
         predicate: hasAffiliation
         object: ?affiliation
       - subject: ?affiliation
         predicate: rdf:type
         object: ?organization       
-      - subject: ?otherusers
+      - subject: ?coauthors
         predicate: hasUserID
-        object: ?otherusers        
+        object: ?coauthors
+      - subject: ?coauthors
+        predicate: rdf:type
+        object: :Person         
+  - Person:
+      - subject: ?postinguser
+        predicate: hasUserName
+        object: _username
+      - subject: ?postinguser
+        predicate: hasAffiliation
+        object: ?affiliation
+      - subject: ?affiliation
+        predicate: rdf:type
+        object: ?organization  
+      - subject: ?organization
+        predicate: hasLocation
+        object: ?location        
+      - subject: ?postinguser
+        predicate: hasUserID
+        object: _postinguser
   - Organization:
       - subject: ?organization
         predicate: rdf:type
